fix send status for remote devices, and a bug in the webserviceapi that broke BLE
